File resource leak fix

--- a/recipes/supervised_fine_tuning/metrics/fireworks/fireworks.ipynb
+++ b/recipes/supervised_fine_tuning/metrics/fireworks/fireworks.ipynb
@@ -629,14 +629,14 @@
     "    # Upload dataset\n",
     "    upload_file_url = f\"{api_base}/accounts/{account_id}/datasets/{dataset_id}:upload\"\n",
     "\n",
-    "    files2 = {\n",
-    "        \"file\": open(f.name, \"r\"),\n",
-    "    }\n",
-    "    upload_file_result = requests.post(\n",
-    "        upload_file_url, headers=base_headers, files=files2\n",
-    "    )\n",
-    "\n",
-    "    print(upload_file_result)"
+    "    with open(f.name,\"r\") as file:\n",
+    "        dataset = {\n",
+    "            \"file\": file\n",
+    "        }\n",
+    "        upload_file_result = requests.post(\n",
+    "            upload_file_url, headers=base_headers, files=dataset\n",
+    "        )\n",
+    "        print(upload_file_result)"
    ]
   },
   {
@@ -667,13 +667,13 @@
    "outputs": [],
    "source": [
     "create_sft_url = f\"{api_base}/accounts/{account_id}/supervisedFineTuningJobs\"\n",
-    "jsonToSend = {\n",
+    "json_to_send = {\n",
     "    \"dataset\": f\"accounts/{account_id}/datasets/{dataset_id}\",\n",
     "    \"base_model\": MODEL_NAME,\n",
     "}\n",
     "if NUM_EPOCHS is not None:\n",
-    "    jsonToSend[\"epochs\"] = NUM_EPOCHS\n",
-    "result = requests.post(url=create_sft_url, headers=json_headers, json=jsonToSend)\n",
+    "    json_to_send[\"epochs\"] = NUM_EPOCHS\n",
+    "result = requests.post(url=create_sft_url, headers=json_headers, json=json_to_send)\n",
     "if result.status_code != 200:\n",
     "    print(json.dumps(result.json(), indent=2))\n",
     "else:\n",
