--- a/recipes/mipro/mipro.ipynb
+++ b/recipes/mipro/mipro.ipynb
@@ -181,6 +181,7 @@
    "source": [
     "import asyncio\n",
     "import json\n",
+    "import os\n",
     "from random import shuffle\n",
     "from typing import Any, Dict, List, Optional, Tuple\n",
     "\n",
@@ -231,8 +232,6 @@
    "source": [
     "mipro_client = await AsyncTensorZeroGateway.build_embedded(\n",
     "    config_file=\"config/tensorzero.toml\",\n",
-    "    # clickhouse_url=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"],\n",
-    "    # clickhouse_url=\"http://chuser:chpassword@localhost:8123/tensorzero_ui_fixtures\",\n",
     ")\n",
     "semaphore = asyncio.Semaphore(MAX_CONCURRENT_REQUESTS)"
    ]
@@ -264,7 +263,7 @@
    "source": [
     "original_client = await AsyncTensorZeroGateway.build_embedded(\n",
     "    config_file=CONFIG_DIR,\n",
-    "    clickhouse_url=\"http://chuser:chpassword@localhost:8123/tensorzero_ui_fixtures\",\n",
+    "    clickhouse_url=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"],\n",
     ")"
    ]
   },
@@ -280,8 +279,7 @@
     "base_variant = base_function.variants[TEMPLATE_VARIANT_NAME]\n",
     "if not isinstance(base_variant, ChatCompletionConfig):\n",
     "    raise ValueError(\"Only chat completion variants are supported\")\n",
-    "# model_name = base_variant.model_name\n",
-    "model_name = \"openai::gpt-4o-mini\""
+    "model_name = base_variant.model_name"
    ]
   },
   {
