updated google and fireworks notebooks

--- a/recipes/supervised_fine_tuning/metrics/google-vertex/google_vertex.ipynb
+++ b/recipes/supervised_fine_tuning/metrics/google-vertex/google_vertex.ipynb
@@ -76,7 +76,6 @@
     "import tempfile\n",
     "import time\n",
     "import warnings\n",
-    "from pathlib import Path\n",
     "from typing import Any, Dict, List, Optional\n",
     "\n",
     "import numpy as np\n",
@@ -87,8 +86,7 @@
     "from google.cloud.aiplatform_v1.types import JobState\n",
     "from IPython.display import clear_output\n",
     "from tensorzero import (\n",
-    "    BooleanMetricNode,\n",
-    "    FloatMetricNode,\n",
+    "    FloatMetricFilter,\n",
     "    RawText,\n",
     "    TensorZeroGateway,\n",
     "    Text,\n",
@@ -104,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize Vertex AI"
+    "Initialize Vertex AI\n"
    ]
   },
   {
@@ -120,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Initialize the TensorZero client"
+    "Initialize the TensorZero client\n"
    ]
   },
   {
@@ -140,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the TensorZero configuration file.\n"
+    "Set the metric filter\n"
    ]
   },
   {
@@ -149,94 +147,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = Path(CONFIG_PATH)\n",
-    "\n",
-    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
-    "\n",
-    "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Valudate config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"functions\" in config, \"No `[functions]` section found in config\"\n",
-    "assert FUNCTION_NAME in config[\"functions\"], (\n",
-    "    f\"No function named `{FUNCTION_NAME}` found in config\"\n",
+    "comparison_operator = \">=\"\n",
+    "metric_node = FloatMetricFilter(\n",
+    "    metric_name=METRIC_NAME,\n",
+    "    value=FLOAT_METRIC_THRESHOLD,\n",
+    "    comparison_operator=comparison_operator,\n",
     ")\n",
-    "assert \"variants\" in config[\"functions\"][FUNCTION_NAME], (\n",
-    "    f\"No variants section found for function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "assert TEMPLATE_VARIANT_NAME in config[\"functions\"][FUNCTION_NAME][\"variants\"], (\n",
-    "    f\"No variant named `{TEMPLATE_VARIANT_NAME}` found in function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "\n",
-    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
-    "\n",
-    "variant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve the metric configuration."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"metrics\" in config, \"No `[metrics]` section found in config\"\n",
-    "assert METRIC_NAME in config[\"metrics\"], (\n",
-    "    f\"No metric named `{METRIC_NAME}` found in config\"\n",
-    ")\n",
-    "\n",
-    "metric = config[\"metrics\"][METRIC_NAME]\n",
-    "\n",
-    "metric"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Set the metric filter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"optimize\" in metric, \"Metric is missing the `optimize` field\"\n",
-    "\n",
-    "if metric.get(\"type\") == \"float\":\n",
-    "    comparison_operator = \">=\" if metric[\"optimize\"] == \"max\" else \"<=\"\n",
-    "    metric_node = FloatMetricNode(\n",
-    "        metric_name=METRIC_NAME,\n",
-    "        value=FLOAT_METRIC_THRESHOLD,\n",
-    "        comparison_operator=comparison_operator,\n",
-    "    )\n",
-    "elif metric.get(\"type\") == \"boolean\":\n",
-    "    metric_node = BooleanMetricNode(\n",
-    "        metric_name=METRIC_NAME,\n",
-    "        value=True if metric[\"optimize\"] == \"max\" else False,\n",
-    "    )\n",
+    "# metric_node = BooleanMetricFilter(\n",
+    "#     metric_name=METRIC_NAME,\n",
+    "#     value=True  # or False\n",
+    "# )\n",
     "\n",
     "metric_node"
    ]
@@ -245,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the inferences and feedback from ClickHouse."
+    "Query the inferences and feedback from ClickHouse.\n"
    ]
   },
   {
@@ -266,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Render the stored inferences"
+    "Render the stored inferences\n"
    ]
   },
   {
@@ -285,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert inferences to vertex format"
+    "Convert inferences to vertex format\n"
    ]
   },
   {
@@ -482,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upload the training and validation datasets to GCP"
+    "Upload the training and validation datasets to GCP\n"
    ]
   },
   {
@@ -532,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Launch the fine-tuning job."
+    "Launch the fine-tuning job.\n"
    ]
   },
   {
@@ -554,7 +474,7 @@
    "source": [
     "Wait for the fine-tuning job to complete.\n",
     "\n",
-    "This cell will take a while to run."
+    "This cell will take a while to run.\n"
    ]
   },
   {
@@ -620,36 +540,6 @@
    "metadata": {},
    "source": [
     "Finally, add a new variant to your function to use the fine-tuned model.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variant_config = {\n",
-    "    \"type\": \"chat_completion\",\n",
-    "    \"model\": fine_tuned_model,\n",
-    "}\n",
-    "\n",
-    "system_template = variant.get(\"system_template\")\n",
-    "if system_template:\n",
-    "    variant_config[\"system_template\"] = system_template\n",
-    "\n",
-    "user_template = variant.get(\"user_template\")\n",
-    "if user_template:\n",
-    "    variant_config[\"user_template\"] = user_template\n",
-    "\n",
-    "assistant_template = variant.get(\"assistant_template\")\n",
-    "if assistant_template:\n",
-    "    variant_config[\"assistant_template\"] = assistant_template\n",
-    "\n",
-    "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {fine_tuned_model: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
    ]
   },
   {
