--- a/recipes/supervised_fine_tuning/metrics/openai/openai.ipynb
+++ b/recipes/supervised_fine_tuning/metrics/openai/openai.ipynb
@@ -73,24 +73,23 @@
     "import tempfile\n",
     "import time\n",
     "import warnings\n",
-    "from pathlib import Path\n",
     "from pprint import pprint\n",
     "from typing import Any, Dict, List, Optional\n",
     "\n",
-    "import numpy as np\n",
     "import openai\n",
-    "import pandas as pd\n",
     "import toml\n",
-    "from clickhouse_connect import get_client\n",
     "from IPython.display import clear_output\n",
-    "from minijinja import Environment"
+    "from tensorzero import (\n",
+    "    FloatMetricFilter,\n",
+    "    TensorZeroGateway,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the TensorZero configuration file.\n"
+    "Initialize the TensorZero client\n"
    ]
   },
   {
@@ -99,20 +98,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = Path(CONFIG_PATH)\n",
-    "\n",
-    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
-    "\n",
-    "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)"
+    "tensorzero_client = TensorZeroGateway.build_embedded(\n",
+    "    config_file=CONFIG_PATH,\n",
+    "    clickhouse_url=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"],\n",
+    "    timeout=15,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieve the metric configuration.\n"
+    "Set the metric filter as needed\n"
    ]
   },
   {
@@ -121,21 +118,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert \"metrics\" in config, \"No `[metrics]` section found in config\"\n",
-    "assert METRIC_NAME in config[\"metrics\"], (\n",
-    "    f\"No metric named `{METRIC_NAME}` found in config\"\n",
+    "comparison_operator = \">=\"\n",
+    "metric_node = FloatMetricFilter(\n",
+    "    metric_name=METRIC_NAME,\n",
+    "    value=FLOAT_METRIC_THRESHOLD,\n",
+    "    comparison_operator=comparison_operator,\n",
     ")\n",
+    "# metric_node = BooleanMetricFilter(\n",
+    "#     metric_name=METRIC_NAME,\n",
+    "#     value=True  # or False\n",
+    "# )\n",
     "\n",
-    "metric = config[\"metrics\"][METRIC_NAME]\n",
-    "\n",
-    "metric"
+    "metric_node"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieve the configuration for the variant with the templates we'll use for fine-tuning.\n"
+    "Query the inferences from ClickHouse\n"
    ]
   },
   {
@@ -144,197 +145,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert \"functions\" in config, \"No `[functions]` section found in config\"\n",
-    "assert FUNCTION_NAME in config[\"functions\"], (\n",
-    "    f\"No function named `{FUNCTION_NAME}` found in config\"\n",
-    ")\n",
-    "assert \"variants\" in config[\"functions\"][FUNCTION_NAME], (\n",
-    "    f\"No variants section found for function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "assert TEMPLATE_VARIANT_NAME in config[\"functions\"][FUNCTION_NAME][\"variants\"], (\n",
-    "    f\"No variant named `{TEMPLATE_VARIANT_NAME}` found in function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "\n",
-    "function_type = config[\"functions\"][FUNCTION_NAME][\"type\"]\n",
-    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
-    "\n",
-    "variant"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve the system, user, and assistant templates in the variant (if any), and initialize a minijinja environment with them.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "templates = {}\n",
-    "\n",
-    "if \"assistant_template\" in variant:\n",
-    "    assistant_template_path = config_path.parent / variant[\"assistant_template\"]\n",
-    "    with assistant_template_path.open(\"r\") as f:\n",
-    "        templates[\"assistant\"] = f.read()\n",
-    "\n",
-    "if \"system_template\" in variant:\n",
-    "    system_template_path = config_path.parent / variant[\"system_template\"]\n",
-    "    with system_template_path.open(\"r\") as f:\n",
-    "        templates[\"system\"] = f.read()\n",
-    "\n",
-    "if \"user_template\" in variant:\n",
-    "    user_template_path = config_path.parent / variant[\"user_template\"]\n",
-    "    with user_template_path.open(\"r\") as f:\n",
-    "        templates[\"user\"] = f.read()\n",
-    "\n",
-    "env = Environment(templates=templates)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Initialize the ClickHouse client.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ, (\n",
-    "    \"TENSORZERO_CLICKHOUSE_URL environment variable not set\"\n",
-    ")\n",
-    "\n",
-    "clickhouse_client = get_client(dsn=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Determine the ClickHouse table name for the function.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inference_table_name = {\"chat\": \"ChatInference\", \"json\": \"JsonInference\"}.get(\n",
-    "    function_type\n",
-    ")\n",
-    "\n",
-    "if inference_table_name is None:\n",
-    "    raise ValueError(f\"Unsupported function type: {function_type}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Determine the ClickHouse table name for the metric.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feedback_table_name = {\n",
-    "    \"float\": \"FloatMetricFeedback\",\n",
-    "    \"boolean\": \"BooleanMetricFeedback\",\n",
-    "}.get(metric[\"type\"])\n",
-    "\n",
-    "if feedback_table_name is None:\n",
-    "    raise ValueError(f\"Unsupported metric type: {metric['type']}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Determine the correct join key to use for the metric on the inference table.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inference_join_key = {\n",
-    "    \"episode\": \"episode_id\",\n",
-    "    \"inference\": \"id\",\n",
-    "}.get(metric[\"level\"])\n",
-    "\n",
-    "if inference_join_key is None:\n",
-    "    raise ValueError(f\"Unsupported metric level: {metric['level']}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query the inferences and feedback from ClickHouse.\n",
-    "\n",
-    "If the metric is a float metric, we need to filter the data based on the threshold.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"optimize\" in metric, \"Metric is missing the `optimize` field\"\n",
-    "\n",
-    "threshold = FLOAT_METRIC_THRESHOLD if metric[\"type\"] == \"float\" else 0.5\n",
-    "comparison_operator = \">=\" if metric[\"optimize\"] == \"max\" else \"<=\"\n",
-    "\n",
-    "query = f\"\"\"\n",
-    "SELECT\n",
-    "    i.variant_name,\n",
-    "    i.input,\n",
-    "    i.output,\n",
-    "    f.value,\n",
-    "    i.episode_id\n",
-    "FROM\n",
-    "    {inference_table_name} i\n",
-    "JOIN\n",
-    "    (SELECT\n",
-    "        target_id,\n",
-    "        value,\n",
-    "        ROW_NUMBER() OVER (PARTITION BY target_id ORDER BY timestamp DESC) as rn\n",
-    "    FROM\n",
-    "        {feedback_table_name}\n",
-    "    WHERE\n",
-    "        metric_name = %(metric_name)s\n",
-    "        AND value {comparison_operator} %(threshold)s\n",
-    "    ) f ON i.{inference_join_key} = f.target_id and f.rn = 1\n",
-    "WHERE\n",
-    "    i.function_name = %(function_name)s\n",
-    "LIMIT %(max_samples)s\n",
-    "\"\"\"\n",
-    "\n",
-    "params = {\n",
-    "    \"function_name\": FUNCTION_NAME,\n",
-    "    \"metric_name\": METRIC_NAME,\n",
-    "    \"comparison_operator\": comparison_operator,\n",
-    "    \"threshold\": threshold,\n",
-    "    \"max_samples\": MAX_SAMPLES,\n",
-    "}\n",
-    "\n",
-    "df = clickhouse_client.query_df(query, params)\n",
-    "\n",
-    "df.head()"
+    "stored_inferences = tensorzero_client.experimental_list_inferences(\n",
+    "    function_name=FUNCTION_NAME,\n",
+    "    variant_name=None,\n",
+    "    output_source=\"inference\",  # could also be \"demonstration\"\n",
+    "    filters=metric_node,\n",
+    "    limit=MAX_SAMPLES,\n",
+    ")"
    ]
   },
   {
@@ -342,6 +159,18 @@
    "metadata": {},
    "source": [
     "Render the inputs using the templates.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rendered_inferences = tensorzero_client.experimental_render_inferences(\n",
+    "    stored_inferences=stored_inferences,\n",
+    "    variants={FUNCTION_NAME: TEMPLATE_VARIANT_NAME},\n",
+    ")"
    ]
   },
   {
@@ -360,8 +189,6 @@
     "    for content_block in message[\"content\"]:\n",
     "        if content_block[\"type\"] == \"text\":\n",
     "            parsed_content = content_block[\"value\"]\n",
-    "            if not isinstance(parsed_content, str):\n",
-    "                parsed_content = env.render_template(role, **parsed_content)\n",
     "            content.append({\"type\": \"text\", \"text\": parsed_content})\n",
     "        elif content_block[\"type\"] == \"raw_text\":\n",
     "            content.append({\"type\": \"text\", \"text\": content_block[\"value\"]})\n",
@@ -417,35 +244,30 @@
     "    content: List[str] = []\n",
     "    tool_calls: List[Dict[str, Any]] = []\n",
     "\n",
-    "    if function_type == \"json\":\n",
-    "        return {\"role\": \"assistant\", \"content\": output[\"raw\"]}\n",
-    "    elif function_type == \"chat\":\n",
-    "        for content_block in output:\n",
-    "            if content_block[\"type\"] == \"text\":\n",
-    "                content.append({\"type\": \"text\", \"text\": content_block[\"text\"]})\n",
-    "            elif content_block[\"type\"] == \"thought\":\n",
-    "                content.append(\n",
-    "                    {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
-    "                )\n",
-    "            elif content_block[\"type\"] == \"tool_call\":\n",
-    "                tool_calls.append(\n",
-    "                    {\n",
-    "                        \"function\": {\n",
-    "                            \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
-    "                            \"name\": content_block[\"name\"],\n",
-    "                        },\n",
-    "                        \"id\": content_block[\"id\"],\n",
-    "                        \"type\": \"function\",\n",
-    "                    }\n",
-    "                )\n",
-    "            else:\n",
-    "                warnings.warn(\n",
-    "                    f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
-    "                    UserWarning,\n",
-    "                )\n",
-    "                return None\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unsupported function type: {function_type}\")\n",
+    "    for content_block in output:\n",
+    "        if content_block[\"type\"] == \"text\":\n",
+    "            content.append({\"type\": \"text\", \"text\": content_block[\"text\"]})\n",
+    "        elif content_block[\"type\"] == \"thought\":\n",
+    "            content.append(\n",
+    "                {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
+    "            )\n",
+    "        elif content_block[\"type\"] == \"tool_call\":\n",
+    "            tool_calls.append(\n",
+    "                {\n",
+    "                    \"function\": {\n",
+    "                        \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
+    "                        \"name\": content_block[\"name\"],\n",
+    "                    },\n",
+    "                    \"id\": content_block[\"id\"],\n",
+    "                    \"type\": \"function\",\n",
+    "                }\n",
+    "            )\n",
+    "        else:\n",
+    "            warnings.warn(\n",
+    "                f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
+    "                UserWarning,\n",
+    "            )\n",
+    "            return None\n",
     "\n",
     "    # Once we finish collecting all blocks, create one assistant message.\n",
     "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
@@ -458,31 +280,25 @@
     "\n",
     "\n",
     "def sample_to_openai_messages(sample) -> List[Dict[str, Any]]:\n",
-    "    function_input = json.loads(sample[\"input\"])\n",
-    "\n",
     "    rendered_messages = []\n",
     "\n",
     "    # Add the system message to the rendered messages\n",
     "    # If there is data passed in or a system template there must be a system message\n",
-    "    system = function_input.get(\"system\", {})\n",
-    "    if len(system) > 0 or system_template_path:\n",
-    "        if system_template_path:\n",
-    "            system_message = env.render_template(\"system\", **system)\n",
-    "            rendered_messages.append({\"role\": \"system\", \"content\": system_message})\n",
-    "        else:\n",
-    "            rendered_messages.append({\"role\": \"system\", \"content\": system})\n",
+    "    system = sample.system\n",
+    "    if system:\n",
+    "        rendered_messages.append({\"role\": \"system\", \"content\": system})\n",
     "\n",
     "    # Add the input messages to the rendered messages\n",
-    "    for message in function_input[\"messages\"]:\n",
+    "    for message in sample.messages:\n",
     "        rendered_message = render_message(message)\n",
     "        if rendered_message is None:\n",
     "            # `render_message` will return None if the message contains an unknown or unsupported content block.\n",
     "            # The entire example is dropped if this is the case.\n",
     "            return None\n",
-    "        rendered_messages.extend(render_message(message))\n",
+    "        rendered_messages.extend(rendered_message)\n",
     "\n",
     "    # Add the output to the messages\n",
-    "    output = json.loads(sample[\"output\"])\n",
+    "    output = sample.output\n",
     "    rendered_output = render_output(output)\n",
     "    if rendered_output is None:\n",
     "        # `render_output` will return None if the output contains an unknown or unsupported content block.\n",
@@ -490,15 +306,16 @@
     "        return None\n",
     "    rendered_messages.append(rendered_output)\n",
     "\n",
-    "    return {\"messages\": rendered_messages}\n",
-    "\n",
-    "\n",
-    "df[\"openai_messages\"] = df.apply(sample_to_openai_messages, axis=1)\n",
-    "\n",
-    "# Drop null rows\n",
-    "df = df[df[\"openai_messages\"].notna()]\n",
-    "\n",
-    "df.head()"
+    "    return {\"messages\": rendered_messages}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "openai_samples = [sample_to_openai_messages(sample) for sample in stored_inferences]"
    ]
   },
   {
@@ -515,26 +332,22 @@
    "outputs": [],
    "source": [
     "# Get unique episode_ids\n",
-    "unique_episode_ids = df[\"episode_id\"].unique()\n",
+    "episode_ids = list(set(sample.episode_id for sample in stored_inferences))\n",
+    "split_index = int(len(episode_ids) * VAL_FRACTION)\n",
+    "train_episode_ids = episode_ids[:split_index]\n",
+    "val_episode_ids = episode_ids[split_index:]\n",
     "\n",
-    "# Shuffle the unique episode_ids\n",
-    "np.random.seed(42)\n",
-    "np.random.shuffle(unique_episode_ids)\n",
+    "train_samples = [\n",
+    "    sample for sample in stored_inferences if sample.episode_id in train_episode_ids\n",
+    "]\n",
+    "val_samples = [\n",
+    "    sample for sample in stored_inferences if sample.episode_id in val_episode_ids\n",
+    "]\n",
     "\n",
-    "# Calculate the split index for episode_ids\n",
-    "split_index = int(len(unique_episode_ids) * (1 - VAL_FRACTION))\n",
     "\n",
-    "# Split the episode_ids into training and validation sets\n",
-    "train_episode_ids = unique_episode_ids[:split_index]\n",
-    "val_episode_ids = unique_episode_ids[split_index:]\n",
-    "\n",
-    "# Create training and validation DataFrames based on episode_ids\n",
-    "train_df = df[df[\"episode_id\"].isin(train_episode_ids)]\n",
-    "val_df = df[df[\"episode_id\"].isin(val_episode_ids)]\n",
-    "\n",
-    "print(f\"Training set size: {len(train_df)}\")\n",
-    "print(f\"Validation set size: {len(val_df)}\")\n",
-    "print(f\"Actual validation fraction: {len(val_df) / len(df):.2f}\")"
+    "print(f\"Training set size: {len(train_samples)}\")\n",
+    "print(f\"Validation set size: {len(val_samples)}\")\n",
+    "print(f\"Actual validation fraction: {len(val_samples) / len(stored_inferences):.2f}\")"
    ]
   },
   {
@@ -550,10 +363,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def upload_dataset_to_openai(df: pd.DataFrame, openai_client: openai.OpenAI) -> str:\n",
+    "def upload_dataset_to_openai(samples, openai_client: openai.OpenAI) -> str:\n",
     "    with tempfile.NamedTemporaryFile(mode=\"w\", suffix=\".jsonl\", delete=False) as f:\n",
     "        # Write the openai_messages to the temporary file\n",
-    "        for item in df[\"openai_messages\"]:\n",
+    "        for item in samples:\n",
     "            json.dump(item, f)\n",
     "            f.write(\"\\n\")\n",
     "        f.flush()\n",
@@ -567,8 +380,8 @@
     "\n",
     "openai_client = openai.OpenAI()\n",
     "\n",
-    "train_file_object_id = upload_dataset_to_openai(train_df, openai_client)\n",
-    "val_file_object_id = upload_dataset_to_openai(val_df, openai_client)"
+    "train_file_object_id = upload_dataset_to_openai(train_samples, openai_client)\n",
+    "val_file_object_id = upload_dataset_to_openai(val_samples, openai_client)"
    ]
   },
   {
@@ -651,37 +464,6 @@
    "metadata": {},
    "source": [
     "Finally, add a new variant to your function to use the fine-tuned model.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variant_config = {\n",
-    "    \"type\": \"chat_completion\",\n",
-    "    \"weight\": 0,\n",
-    "    \"model\": fine_tuned_model,\n",
-    "}\n",
-    "\n",
-    "system_template = variant.get(\"system_template\")\n",
-    "if system_template:\n",
-    "    variant_config[\"system_template\"] = system_template\n",
-    "\n",
-    "user_template = variant.get(\"user_template\")\n",
-    "if user_template:\n",
-    "    variant_config[\"user_template\"] = user_template\n",
-    "\n",
-    "assistant_template = variant.get(\"assistant_template\")\n",
-    "if assistant_template:\n",
-    "    variant_config[\"assistant_template\"] = assistant_template\n",
-    "\n",
-    "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {fine_tuned_model: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
    ]
   },
   {
