updated google notebook documentation

--- a/recipes/supervised_fine_tuning/metrics/google-vertex/google_vertex.ipynb
+++ b/recipes/supervised_fine_tuning/metrics/google-vertex/google_vertex.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query the inferences and feedback from ClickHouse.\n"
+    "Query the inferences from ClickHouse.\n"
    ]
   },
   {
@@ -177,6 +177,7 @@
     "stored_inferences = tensorzero_client.experimental_list_inferences(\n",
     "    function_name=FUNCTION_NAME,\n",
     "    variant_name=None,\n",
+    "    output_source=\"inference\",  # could also be \"demonstration\"\n",
     "    filters=metric_node,\n",
     "    limit=MAX_SAMPLES,\n",
     ")"
