Error handling + JSON print when uploading dataset

--- a/recipes/supervised_fine_tuning/metrics/fireworks/fireworks.ipynb
+++ b/recipes/supervised_fine_tuning/metrics/fireworks/fireworks.ipynb
@@ -628,15 +628,20 @@
     "    print(create_record_result)\n",
     "    # Upload dataset\n",
     "    upload_file_url = f\"{api_base}/accounts/{account_id}/datasets/{dataset_id}:upload\"\n",
-    "\n",
-    "    with open(f.name,\"r\") as file:\n",
-    "        dataset = {\n",
-    "            \"file\": file\n",
-    "        }\n",
-    "        upload_file_result = requests.post(\n",
-    "            upload_file_url, headers=base_headers, files=dataset\n",
-    "        )\n",
-    "        print(upload_file_result)"
+    "    try:\n",
+    "        with open(f.name, \"r\") as file:\n",
+    "            dataset = {\"file\": file}\n",
+    "            upload_file_result = requests.post(\n",
+    "                upload_file_url, headers=base_headers, files=dataset\n",
+    "            )\n",
+    "            upload_file_result.raise_for_status()\n",
+    "            print(json.dumps(upload_file_result.json(), indent=2))\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"File not found: {f.name}\")\n",
+    "    except requests.RequestException as e:\n",
+    "        print(f\"HTTP request failed: {e}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")"
    ]
   },
   {
