--- a/recipes/supervised_fine_tuning/demonstrations/fireworks/fireworks.ipynb
+++ b/recipes/supervised_fine_tuning/demonstrations/fireworks/fireworks.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This recipe allows TensorZero users to fine-tune open-source LLMs using their own data.\n",
     "Since TensorZero automatically logs all inferences and feedback, it is straightforward to fine-tune a model using your own data and any prompt you want.\n",
-    "We follow the Fireworks [docs](https://docs.fireworks.ai/fine-tuning/fine-tuning-models) on fine-tuning a model.\n"
+    "We follow the Fireworks [docs](https://docs.fireworks.ai/fine-tuning/fine-tuning-via-api) on fine-tuning a model.\n"
    ]
   },
   {
@@ -29,8 +29,8 @@
    "source": [
     "To get started:\n",
     "\n",
-    "- Set the `TENSORZERO_CLICKHOUSE_URL` environment variable. For example: `TENSORZERO_CLICKHOUSE_URL=\"http://chuser:chpassword@localhost:8123/tensorzero\"`\n",
-    "- You'll also need to [install](https://docs.fireworks.ai/tools-sdks/firectl/firectl) the CLI tool `firectl` on your machine and sign in with `firectl signin`. You can test that this all worked with `firectl whoami`.\n",
+    "Set the `TENSORZERO_CLICKHOUSE_URL`, `FIREWORKS_API_KEY`, and `FIREWORKS_ACCOUNT_ID` environment variable. See the .env.example file.\n",
+    "Update the following parameters:.\n",
     "- Update the following parameters:\n"
    ]
   },
@@ -43,9 +43,17 @@
    "source": [
     "import os\n",
     "\n",
-    "CLICKHOUSE_URL = os.getenv(\"TENSORZERO_CLICKHOUSE_URL\")\n",
+    "from dotenv import load_dotenv\n",
     "\n",
-    "assert CLICKHOUSE_URL is not None, \"TENSORZERO_CLICKHOUSE_URL is not set\""
+    "load_dotenv()\n",
+    "\n",
+    "CLICKHOUSE_URL = os.getenv(\"TENSORZERO_CLICKHOUSE_URL\")\n",
+    "FIREWORKS_API_KEY = os.getenv(\"FIREWORKS_API_KEY\")\n",
+    "account_id = os.getenv(\"FIREWORKS_ACCOUNT_ID\")\n",
+    "\n",
+    "assert CLICKHOUSE_URL is not None, \"TENSORZERO_CLICKHOUSE_URL is not set\"\n",
+    "assert FIREWORKS_API_KEY is not None, \"FIREWORKS_API_KEY is not set\"\n",
+    "assert account_id is not None, \"FIREWORKS_ACCOUNT_ID is not set\""
    ]
   },
   {
@@ -85,14 +93,13 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import os\n",
-    "import subprocess\n",
     "import tempfile\n",
     "import warnings\n",
     "from pathlib import Path\n",
     "from time import sleep\n",
     "from typing import Any, Dict, List, Optional\n",
     "\n",
+    "import requests\n",
     "import toml\n",
     "from clickhouse_connect import get_client\n",
     "from IPython.display import clear_output\n",
@@ -507,7 +514,7 @@
    "id": "7f87a461",
    "metadata": {},
    "source": [
-    "We'll write the conversational messages to a temporary file for the Fireworks CLI\n"
+    "We'll write the conversational messages to a temporary file for the Fireworks API\n"
    ]
   },
   {
@@ -518,16 +525,45 @@
    "outputs": [],
    "source": [
     "dataset_id = f\"t0-{uuid7()}\"\n",
+    "api_base = \"https://api.fireworks.ai/v1\"\n",
+    "base_headers = {\"Authorization\": f\"Bearer {FIREWORKS_API_KEY}\"}\n",
+    "json_headers = base_headers.copy()\n",
+    "json_headers.update({\"Content-Type\": \"application/json\"})\n",
     "\n",
     "with tempfile.NamedTemporaryFile(delete=False, suffix=\".jsonl\") as f:\n",
     "    for _, row in df.iterrows():\n",
     "        f.write((json.dumps(row[\"conversational_messages\"]) + \"\\n\").encode(\"utf-8\"))\n",
-    "\n",
-    "    dataset_path = f.name\n",
-    "    result = subprocess.run(\n",
-    "        [\"firectl\", \"create\", \"dataset\", dataset_id, dataset_path], capture_output=True\n",
+    "    create_record_url = f\"{api_base}/accounts/{account_id}/datasets/\"\n",
+    "    # Create dataset\n",
+    "    create_record_result = requests.post(\n",
+    "        create_record_url,\n",
+    "        json={\n",
+    "            \"datasetId\": dataset_id,\n",
+    "            \"dataset\": {\n",
+    "                \"displayName\": dataset_id,\n",
+    "                \"format\": \"CHAT\",\n",
+    "                \"exampleCount\": len(df),\n",
+    "            },\n",
+    "        },\n",
+    "        headers=json_headers,\n",
     "    )\n",
-    "print(result.stdout)"
+    "    print(create_record_result)\n",
+    "    # Upload dataset\n",
+    "    upload_file_url = f\"{api_base}/accounts/{account_id}/datasets/{dataset_id}:upload\"\n",
+    "    try:\n",
+    "        with open(f.name, \"r\") as file:\n",
+    "            dataset = {\"file\": file}\n",
+    "            upload_file_result = requests.post(\n",
+    "                upload_file_url, headers=base_headers, files=dataset\n",
+    "            )\n",
+    "            upload_file_result.raise_for_status()\n",
+    "            print(json.dumps(upload_file_result.json(), indent=2))\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"File not found: {f.name}\")\n",
+    "    except requests.RequestException as e:\n",
+    "        print(f\"HTTP request failed: {e}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred: {e}\")"
    ]
   },
   {
@@ -537,22 +573,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = subprocess.run([\"firectl\", \"get\", \"dataset\", dataset_id], capture_output=True)\n",
-    "print(result.stdout.decode(\"utf-8\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e6553b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_job_id(stdout: str) -> str:\n",
-    "    for line in stdout.splitlines():\n",
-    "        if line.strip().startswith(\"Name:\"):\n",
-    "            return line.split(\"/\")[-1].strip()\n",
-    "    raise ValueError(\"Job ID not found in output\")"
+    "check_state_url = f\"{api_base}/accounts/{account_id}/datasets/{dataset_id}\"\n",
+    "result = requests.get(check_state_url, headers=base_headers)\n",
+    "print(json.dumps(result.json(), indent=2))"
    ]
   },
   {
@@ -570,32 +593,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "command = [\n",
-    "    \"firectl\",\n",
-    "    \"create\",\n",
-    "    \"sftj\",\n",
-    "    \"--display-name\",\n",
-    "    f\"tensorzero-ft-job-{dataset_id}\",\n",
-    "    \"--dataset\",\n",
-    "    dataset_id,\n",
-    "    \"--base-model\",\n",
-    "    MODEL_NAME,\n",
-    "]\n",
-    "\n",
+    "create_sft_url = f\"{api_base}/accounts/{account_id}/supervisedFineTuningJobs\"\n",
+    "json_to_send = {\n",
+    "    \"dataset\": f\"accounts/{account_id}/datasets/{dataset_id}\",\n",
+    "    \"base_model\": MODEL_NAME,\n",
+    "}\n",
     "if NUM_EPOCHS is not None:\n",
-    "    command.append(\"--epochs\")\n",
-    "    command.append(str(NUM_EPOCHS))\n",
-    "\n",
-    "print(\"Command: \", \" \".join(command))\n",
-    "\n",
-    "result = subprocess.run(command, capture_output=True)\n",
-    "\n",
-    "if result.returncode != 0:\n",
-    "    print(result.stderr.decode(\"utf-8\"))\n",
+    "    json_to_send[\"epochs\"] = NUM_EPOCHS\n",
+    "result = requests.post(url=create_sft_url, headers=json_headers, json=json_to_send)\n",
+    "if result.status_code != 200:\n",
+    "    print(json.dumps(result.json(), indent=2))\n",
     "else:\n",
-    "    stdout = result.stdout.decode(\"utf-8\")\n",
-    "    print(stdout)\n",
-    "    job_id = get_job_id(stdout)\n",
+    "    response = result.json()\n",
+    "    print(json.dumps(response, indent=2))\n",
+    "    job_id = response[\"name\"]\n",
     "    print(f\"job_id: {job_id}\")"
    ]
   },
@@ -606,45 +617,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "get_job_status_url = f\"{api_base}/{job_id}\"\n",
     "while True:\n",
     "    clear_output(wait=True)\n",
     "\n",
     "    try:\n",
-    "        command = [\"firectl\", \"get\", \"sftj\", job_id]\n",
-    "        result = subprocess.run(command, capture_output=True)\n",
-    "        stdout = result.stdout.decode(\"utf-8\")\n",
-    "        print(stdout)\n",
+    "        result = requests.get(\n",
+    "            url=get_job_status_url,\n",
+    "            headers=base_headers,\n",
+    "        )\n",
+    "        response = result.json()\n",
+    "        print(json.dumps(result.json(), indent=2))\n",
     "    except Exception as e:\n",
     "        print(f\"Error: {e}\")\n",
     "\n",
-    "    if \"State: JOB_STATE_FAILED\" in stdout:\n",
+    "    if response[\"state\"] == \"JOB_STATE_FAILED\":\n",
     "        raise ValueError(\"Fine-tuning job failed\")\n",
     "\n",
-    "    if \"State: JOB_STATE_COMPLETED\" in stdout:\n",
+    "    if response[\"state\"] == \"JOB_STATE_COMPLETED\":\n",
     "        break\n",
     "\n",
     "    sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39d8f4ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_model_id(stdout: str) -> str:\n",
-    "    for line in stdout.splitlines():\n",
-    "        if line.strip().startswith(\"Output Model:\"):\n",
-    "            return line.split(\":\")[1].strip()\n",
-    "    raise ValueError(\"Model ID not found in output\")\n",
-    "\n",
-    "\n",
-    "model_id = get_model_id(stdout)\n",
-    "\n",
-    "assert model_id\n",
-    "\n",
-    "model_id"
    ]
   },
   {
@@ -662,14 +655,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "command = [\"firectl\", \"deploy\", model_id]\n",
-    "print(\" \".join(command))\n",
-    "result = subprocess.run(command, capture_output=True)\n",
-    "if result.returncode != 0:\n",
-    "    print(result.stderr.decode(\"utf-8\"))\n",
-    "else:\n",
-    "    stdout = result.stdout.decode(\"utf-8\")\n",
-    "    print(stdout)"
+    "model_id = response[\"outputModel\"]\n",
+    "deploy_model_url = f\"{api_base}/accounts/{account_id}/deployedModels\"\n",
+    "result = requests.post(\n",
+    "    url=deploy_model_url,\n",
+    "    headers=json_headers,\n",
+    "    json={\n",
+    "        \"model\": model_id,\n",
+    "        \"default\": True,\n",
+    "        \"serverless\": True,\n",
+    "        \"public\": False,\n",
+    "    },\n",
+    ")"
    ]
   },
   {
@@ -679,17 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model_identifier(model_id: str) -> str:\n",
-    "    command = [\"firectl\", \"get\", \"model\", model_id]\n",
-    "    result = subprocess.run(command, capture_output=True)\n",
-    "    stdout = result.stdout.decode(\"utf-8\")\n",
-    "    for line in stdout.splitlines():\n",
-    "        if line.strip().startswith(\"Name:\"):\n",
-    "            return line.split(\":\")[1].strip()\n",
-    "    raise ValueError(\"Model identifier not found in output\")\n",
-    "\n",
-    "\n",
-    "model_identifier = get_model_identifier(model_id)\n",
+    "model_identifier = model_id\n",
     "\n",
     "assert model_identifier\n",
     "\n",
@@ -783,6 +770,11 @@
    "cell_metadata_filter": "-all",
    "formats": "ipynb,py:percent",
    "main_language": "python"
+  },
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
