Add max_samples variable

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -42,22 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "703152d9",
    "metadata": {},
    "outputs": [],
    "source": [
     "CONFIG_PATH = \"config/tensorzero.toml\"\n",
-    "FUNCTION_NAME = \"extract_entities_combined\"\n",
-    "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini_base\"\n",
+    "FUNCTION_NAME = \"extract_entities\"\n",
+    "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
     "MODEL_NAME = \"gpt-4o-2024-08-06\"\n",
     "VAL_FRACTION = 0.2\n",
+    "MAX_SAMPLES = 1000\n",
     "\n",
     "assert \"OPENAI_API_KEY\" in os.environ\n",
-    "assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ\n",
+    "#assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ\n",
     "\n",
-    "openai_client = openai.OpenAI()\n",
-    "clickhouse_client = get_client(dsn=os.environ[\"TENSORZERO_CLICKHOUSE_URL\"])"
+    "openai_client = openai.OpenAI()"
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "5fc2f7e0",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2c1c9447",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "247f9f86",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "63881094",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "2ec0d77e",
    "metadata": {},
    "outputs": [],
@@ -215,10 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "f453bac2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'clickhouse_client' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m      1\u001b[39m query = \u001b[33mf\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[33mSELECT\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m    i.variant_name AS variant,\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m \u001b[33mLIMIT %(max_samples)s\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     17\u001b[39m params = {\n\u001b[32m     18\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmax_samples\u001b[39m\u001b[33m\"\u001b[39m: MAX_SAMPLES,\n\u001b[32m     19\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mfunction_name\u001b[39m\u001b[33m\"\u001b[39m: FUNCTION_NAME,\n\u001b[32m     20\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m df = \u001b[43mclickhouse_client\u001b[49m.query_df(query, params)\n\u001b[32m     24\u001b[39m df.head()\n",
+      "\u001b[31mNameError\u001b[39m: name 'clickhouse_client' is not defined"
+     ]
+    }
+   ],
    "source": [
     "query = f\"\"\"\n",
     "SELECT\n",
