--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "703152d9",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"\n",
     "MODEL_NAME = \"gpt-4o-2024-08-06\"\n",
     "VAL_FRACTION = 0.2\n",
-    "MAX_SAMPLES = 1000\n",
+    "MAX_SAMPLES = 500\n",
     "\n",
     "assert \"OPENAI_API_KEY\" in os.environ\n",
     "#assert \"TENSORZERO_CLICKHOUSE_URL\" in os.environ\n",
@@ -78,18 +78,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "5fc2f7e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config_path = Path(CONFIG_PATH)\n",
+    "#config_path = Path(CONFIG_PATH)\n",
+    "config = json.load(open(CONFIG_PATH)) if CONFIG_PATH.endswith(\".json\") else {}\n",
     "\n",
-    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
+    "#assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
+    "#assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
     "\n",
-    "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)\n"
+    "#with config_path.open(\"r\") as f:\n",
+    "#    config = toml.load(f)\n"
    ]
   },
   {
@@ -215,23 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f453bac2",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'clickhouse_client' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m      1\u001b[39m query = \u001b[33mf\u001b[39m\u001b[33m\"\"\"\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[33mSELECT\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[33m    i.variant_name AS variant,\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m \u001b[33mLIMIT %(max_samples)s\u001b[39m\n\u001b[32m     15\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     17\u001b[39m params = {\n\u001b[32m     18\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mmax_samples\u001b[39m\u001b[33m\"\u001b[39m: MAX_SAMPLES,\n\u001b[32m     19\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mfunction_name\u001b[39m\u001b[33m\"\u001b[39m: FUNCTION_NAME,\n\u001b[32m     20\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m df = \u001b[43mclickhouse_client\u001b[49m.query_df(query, params)\n\u001b[32m     24\u001b[39m df.head()\n",
-      "\u001b[31mNameError\u001b[39m: name 'clickhouse_client' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ---------------------------\n",
+    "# Query ClickHouse for data\n",
+    "# ---------------------------\n",
     "query = f\"\"\"\n",
     "SELECT\n",
     "    i.variant_name AS variant,\n",
@@ -240,22 +232,45 @@
     "    i.output AS non_preferred_output,\n",
     "    d.value AS preferred_output\n",
     "FROM\n",
-    "    {inference_table_name} AS i\n",
-    "INNER\n",
-    "    JOIN DemonstrationFeedback AS d ON i.id = d.inference_id\n",
+    "    JsonInference AS i\n",
+    "INNER JOIN DemonstrationFeedback AS d ON i.id = d.inference_id\n",
     "WHERE\n",
     "    (i.function_name = %(function_name)s)\n",
     "LIMIT %(max_samples)s\n",
     "\"\"\"\n",
     "\n",
-    "params = {\n",
-    "    \"max_samples\": MAX_SAMPLES,\n",
-    "    \"function_name\": FUNCTION_NAME,\n",
-    "}\n",
+    "params = {\"function_name\": FUNCTION_NAME, \"max_samples\": MAX_SAMPLES}\n",
+    "df = clickhouse_client.query_df(query, params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f67e6b12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_dpo(example):\n",
+    "    return {\n",
+    "        \"input\": {\n",
+    "            \"messages\": [{\"role\": \"user\", \"content\": example[\"prompt\"]}]\n",
+    "        },\n",
+    "        \"preferred_output\": [{\"role\": \"assistant\", \"content\": example[\"completion\"]}],\n",
+    "        \"non_preferred_output\": [{\"role\": \"assistant\", \"content\": json.loads(example[\"non_preferred_output\"])[\"raw\"]}]\n",
+    "    }\n",
     "\n",
-    "df = clickhouse_client.query_df(query, params)\n",
+    "dpo_rows = []\n",
+    "for _, row in df.iterrows():\n",
+    "    try:\n",
+    "        input_data = json.loads(row[\"input\"])\n",
+    "        output_data = json.loads(row[\"preferred_output\"])\n",
+    "        prompt = input_data[\"messages\"][-1][\"content\"]\n",
+    "        completion = output_data[\"raw\"]\n",
+    "        dpo_rows.append({\"prompt\": prompt, \"completion\": completion, \"non_preferred_output\": row[\"non_preferred_output\"]})\n",
+    "    except:\n",
+    "        continue\n",
     "\n",
-    "df.head()"
+    "dpo_dataset = [format_dpo(r) for r in dpo_rows]"
    ]
   },
   {
@@ -350,8 +365,66 @@
    "id": "abe01ba2",
    "metadata": {},
    "source": [
-    "TODO: Adding the fine-tuned model to the config file\n",
-    "TODO: Adding a new variant to your function to use the fine-tuned model\n"
+    "TODO: Adding the fine-tuned model to the config file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c98d707e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fine_tuned_model = job_status.fine_tuned_model\n",
+    "model_config = {\n",
+    "    \"models\": {\n",
+    "        fine_tuned_model: {\n",
+    "            \"routing\": [\"openai\"],\n",
+    "            \"providers\": {\"openai\": {\"type\": \"openai\", \"model_name\": fine_tuned_model}},\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(toml.dumps(model_config))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4ba9979",
+   "metadata": {},
+   "source": [
+    "TODO: Adding a new variant to your function to use the fine-tuned model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3576241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variant_config = {\n",
+    "    \"type\": \"chat_completion\",\n",
+    "    \"model\": fine_tuned_model,\n",
+    "}\n",
+    "\n",
+    "system_template = variant.get(\"system_template\")\n",
+    "if system_template:\n",
+    "    variant_config[\"system_template\"] = system_template\n",
+    "\n",
+    "user_template = variant.get(\"user_template\")\n",
+    "if user_template:\n",
+    "    variant_config[\"user_template\"] = user_template\n",
+    "\n",
+    "assistant_template = variant.get(\"assistant_template\")\n",
+    "if assistant_template:\n",
+    "    variant_config[\"assistant_template\"] = assistant_template\n",
+    "\n",
+    "full_variant_config = {\n",
+    "    \"functions\": {FUNCTION_NAME: {\"variants\": {fine_tuned_model: variant_config}}}\n",
+    "}\n",
+    "\n",
+    "print(toml.dumps(full_variant_config))"
    ]
   }
  ],
